name:                hmaze
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Patrik Pettersson
maintainer:          pettersson.pa@gmail.com
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HMaze,HMaze.Random
  build-depends:       base >= 4.9 && < 4.10
  build-depends:       random
                     , mtl
                     , data-lens
                     , data-lens-template
                     , array
  default-language:    Haskell2010

executable hmaze-draw
  main-is:             Main.hs
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
  build-depends:       text
                     , hmaze
                     , array
  hs-source-dirs:      app
  default-language:    Haskell2010
